# analitica-ejemplo

./: .gitignore  0_requirements.txt  1_README.md  dashboard_api.py  main.py  pyproject.toml
data/: ventas.csv  ventas.db  ventas_semana2.csv
notebooks/: analisis_ventas.ipynb  analisis_ventas_semana2.ipynb
reports/: estadisticas_ventas.csv
src/: api.py  database.py  estadisticas.py  graficos.py  load_data.py  modelo.py
